PartnerDemo/src/objects/Tab_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tab Settings</relationshipLabel>
        <relationshipName>Tab_Settings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submenus_for_Tab__c</fullName>
        <label>Submenus for Tab</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tab_Name__c</fullName>
        <label>Tab Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab_URL__c</fullName>
        <label>Tab URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Display_Order__c</fullName>
        <label>Unique Display Order</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Tab Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Tab_Name__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Submenus_for_Tab__c</columns>
        <columns>Tab_URL__c</columns>
        <columns>is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Tab Setting-{0000}</displayFormat>
        <label>Tab Setting</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tab Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>